--- a/button_card_templates.yaml
+++ b/button_card_templates.yaml
@@ -778,36 +778,38 @@
       circle: >
         [[[
           const state = null;
-          if (states['lock.front_door'].state === 'locked') {
-            return `
-              <svg viewBox="0 0 50 50">
-                <style>
-                  @keyframes locked {
-                    from,
-                    to {
-                      transform: translateX(0);
+          if (states['lock.front_door']) {
+            if (states['lock.front_door'].state === 'locked') {
+              return `
+                <svg viewBox="0 0 50 50">
+                  <style>
+                    @keyframes locked {
+                      from,
+                      to {
+                        transform: translateX(0);
+                      }
+                      10%,
+                      30%,
+                      50%,
+                      70%,
+                      90% {
+                        transform: translateX(-8%);
+                      }
+                      20%,
+                      40%,
+                      60%,
+                      80% {
+                        transform: translateX(8%);
+                      }
                     }
-                    10%,
-                    30%,
-                    50%,
-                    70%,
-                    90% {
-                      transform: translateX(-8%);
+                    .locked {
+                      animation: locked 1.1s;
                     }
-                    20%,
-                    40%,
-                    60%,
-                    80% {
-                      transform: translateX(8%);
-                    }
-                  }
-                  .locked {
-                    animation: locked 1.1s;
-                  }
-                </style>
-                <path id="lock" class="${state}" d="M8.2 22.6h2.4v-7.2C10.6 7.5 17.1 1 25 1s14.4 6.4 14.4 14.4v7.2h2.4V49H8.2m26.4-26.4v-7.2c0-5.3-4.3-9.6-9.6-9.6s-9.6 4.3-9.6 9.6v7.2"/>
-              </svg>
-            `;
+                  </style>
+                  <path id="lock" class="${state}" d="M8.2 22.6h2.4v-7.2C10.6 7.5 17.1 1 25 1s14.4 6.4 14.4 14.4v7.2h2.4V49H8.2m26.4-26.4v-7.2c0-5.3-4.3-9.6-9.6-9.6s-9.6 4.3-9.6 9.6v7.2"/>
+                </svg>
+              `;
+            }
           }
         ]]]
     styles:
