--- a/popup/home_weston.yaml
+++ b/popup/home_weston.yaml
@@ -66,7 +66,7 @@ browser_mod:
           - entity: device_tracker.weston_phone
             name: Router
             icon: mdi:wifi
-            style: &style |
+            style: |
               state-badge {
                 color: {{ '#3182b7' if is_state(config.entity, 'home') else '#3c3f3f' }};
               }
