Fixed handshake typo for logger

--- a/include/logger.yaml
+++ b/include/logger.yaml
@@ -28,4 +28,4 @@ logger:
     homeassistant.components.yamaha.media_player:
       - "^.* Receiver is offline: Yamaha Receiver$"
     root:
-      - "Sending handshake$"
+      - "Sending handshake.$"
