--- a/btn_card_templates/temperature.yaml
+++ b/btn_card_templates/temperature.yaml
@@ -177,7 +177,7 @@
   #                    CLIMATE                    #
   #                                               #
   #################################################
-  climate2:
+  climate:
     show_state: false
     show_icon: true
     template:
